# TransitOps

./: .gitignore  README.md  TRANSITOPS_DESIGN.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .env  .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/common/: enums.py  exceptions.py  utils.py
backend/app/modules/analytics/: router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/drivers/: models.py  router.py  schemas.py  service.py
backend/app/modules/fuel_expenses/: models.py  router.py  schemas.py  service.py
backend/app/modules/maintenance/: models.py  router.py  schemas.py  service.py
backend/app/modules/trips/: models.py  router.py  schemas.py  service.py
backend/app/modules/vehicles/: models.py  router.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: AdminUsersPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  DriversPage.tsx  FinancialAnalyticsPage.tsx  FuelExpensesPage.tsx  LoginPage.tsx  MaintenancePage.tsx  (+4 more)
src/: App.jsx  index.css
src/components/: ComingSoon.jsx  Navbar.jsx  Sidebar.jsx
src/context/: AuthContext.jsx  ThemeContext.jsx
src/layouts/: DashboardLayout.jsx
src/pages/: Dashboard.jsx  Drivers.jsx  Fuel.jsx  Login.jsx  Maintenance.jsx  Reports.jsx  Trips.jsx  Vehicles.jsx
src/services/: api.js
(+24 files in other folders)
